2018-09-15  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/HTML.pm (_convert_item_line_command),
	* tp/Texinfo/Convert/TexinfoXML.pm (_convert):
	Do not use the 'block_command_line_contents' array: use the 
	'args' array directly.

	* tp/Texinfo/Parser.pm (_end_line): Include an inserted 
	'command_as_argument' element in the 'args' with the type 
	'command_as_argument_inserted'.
	* tp/Texinfo/Convert/Texinfo.pm (@ignored_types): Ignore
	'command_as_argument_inserted'.
	(_expand_cmd_args_to_texi): Avoid outputing a comma after an 
	ignored element.

	* tp/Texinfo/Common.pm: Remove mention of 
	'block_command_line_contents' from a comment.

2018-09-15  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_isolate_last_space): Remove useless 
	argument.  Callers updated.
	(module documentation section): Remove mention of 
	'space_at_end_block_command'.
	* tp/Texinfo/Convert/TexinfoXML.pm (_index_entry): Remove code 
	stripping final whitespace.
	(_convert): Remove a commented-out statement for debugging.

2018-09-15  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_isolate_last_space): For all element
	types except 'menu_entry_node', store trailing spaces as a 
	'spaces_after_argument' value.  This was already done for
	'brace_command_arg'.

	* tp/Texinfo/Convert/Texinfo.pm (convert, _expand_cmd_args_to_texi):
	Check for and output these spaces.

	* tp/Texinfo/Convert/Converter.pm (_end_line_or_comment): Look 
	for these spaces in new location.
	* tp/Texinfo/Convert/Converter.pm (_convert_argument_and_end_line):
	Replace with two new subroutines, one in DocBook.pm, one in
	TexinfoXML.pm.  This allows end-of-line spaces to continue to be 
	ignored in DocBook output.

	* tp/Texinfo/Convert/TexinfoXML.pm (_end_line_spaces): Check for 
	end-of-line spaces in new location.
	(_convert): Check for and output 'spaces_after_argument' in a 
	few places.

2018-09-15  Gavin Smith  <gavinsmith0123@gmail.com>
